--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <header>
-    <h1>[Nome da Banda]</h1>
+    <h1>The Upperground</h1>
     <p>Hardcore/Punk Rock direto da Zona Leste de São Paulo</p>
   </header>
 
